Add close created order settings

--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -104,147 +104,7 @@
             <div class="order-addresess-2">
                 {% if order.detail_set.count > 0 %}
                 {% for detail in order.detail_set.all %}
-
-                <div class="address-item">
-                    <div class="address-head" x-data="{ isOpen: false }">
-                        <div class="icon icon-secondary-default icon-sm rounded-sm">
-                            <i class='bx bx-map-pin bx-xs'></i>
-                        </div>
-                        <div class="dropdown">
-                            <button @click="isOpen = !isOpen" class="btn btn-link btn-xsmall">
-                                <svg class="cursor-pointer icon-svg" xmlns="http://www.w3.org/2000/svg" width="24"
-                                    height="24" viewBox="0 0 24 24">
-                                    <g id="icon_more" data-name="icon more" transform="translate(0 -2)">
-                                        <rect id="Rectangle_177" data-name="Rectangle 177" width="24" height="24"
-                                            transform="translate(0 2)" fill="none" opacity="0.997" />
-                                        <g id="Group_133" data-name="Group 133" transform="translate(2 -16)"
-                                            opacity="0.5">
-                                            <circle id="Ellipse_75" data-name="Ellipse 75" cx="2" cy="2" r="2"
-                                                transform="translate(2 23)" fill="#22154a" opacity="0.697" />
-                                            <circle id="Ellipse_76" data-name="Ellipse 76" cx="2" cy="2" r="2"
-                                                transform="translate(8 23)" fill="#22154a" opacity="0.697" />
-                                            <circle id="Ellipse_77" data-name="Ellipse 77" cx="2" cy="2" r="2"
-                                                transform="translate(14 23)" fill="#22154a" opacity="0.697" />
-                                        </g>
-                                    </g>
-                                </svg>
-                            </button>
-                            <div class="dropdown-menu right"
-                                x-show.transition.in.origin.bottom.right.scale.opacity.400ms.out.origin.top.right.scale.20="isOpen"
-                                @click.away="isOpen = false">
-                                <a href="{% url 'orders:update-detail' detail.pk %}" class="dropdown-item-2">
-                                    <span>Editar</span>
-                                    <i class='bx bx-edit bx-sm'></i>
-                                </a>
-                                <a href="{% url 'details:delete' detail.pk %}?next={{ request.path}}"
-                                    class="dropdown-item-2 text-danger">
-                                    <span>Eliminar</span>
-                                    <i class='bx bx-trash bx-sm'></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="address-delivered">
-                        <div class="address-origin">
-                            <div class="text-small flex items-center"><i style="margin-right: 5px;"
-                                    class="bx bx-user bx-xs"></i> {{ detail.address_origin.full_name }}</div>
-                            <h6>{{ detail.address_origin.address }}</h6>
-                            <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
-                        </div>
-                        <img class="order-icon" src="{% static 'icon/order-icon.svg' %}" />
-                        <div class="address-destiny">
-                            <div class="text-small flex items-center justity-end"><i style="margin-right: 5px;"
-                                    class="bx bx-user bx-xs"></i> {{ detail.address_destiny.full_name }}</div>
-                            <h6>{{ detail.address_destiny.address }}</h6>
-                            <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
-                        </div>
-                    </div>
-                    <div class="address-order-detail">
-                        <div class="collapse" x-data="{ isOpen: false }">
-                            <div class="collapse-title cursor-pointer" @click="isOpen = !isOpen">
-                                <h6>Detalles del pedido</h6>
-                                <i class='bx bx-chevron-down bx-sm' :class="{ 'bx-bx-rotate-180': isOpen }"></i>
-                            </div>
-                            <div class="collapse-content"
-                                x-show.transition.in.scale.opacity.400ms.out.origin.top.scale.opacity.200ms="isOpen">
-                                <div class="client-info">
-                                    <h6 class="mb-2 subheading text-muted">Información del paquete</h6>
-                                    <div class="detail-package">
-                                        <div class="detail-package__row">
-                                            <h6>Tamaño</h6>
-                                            <p>{{ detail.get_size_display }}</p>
-                                        </div>
-                                        <div class="detail-package__row">
-                                            <h6>Contenido</h6>
-                                            <p>{{ detail.contain }}</p>
-                                        </div>
-                                        <div class="detail-package__row">
-                                            <h6>Valor</h6>
-                                            <p>{{ detail.value }}</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="footer-details mt-4">
-                                    <h6 class="mb-2 subheading text-muted">Detalles adicionales</h6>
-                                    <div class="package">
-                                        {% if detail.image %}
-                                        <div class="package-picture modal-container" x-data="{ isOpen: false }">
-                                            <div class="package-picture cursor-pointer" @click="isOpen = true">
-                                                <img src="{{ detail.image.url }}" alt="{{ detail.description }}">
-                                            </div>
-                                            <div x-show.transition.in.scale.opacity.100ms.out.scale.opacity.100ms="isOpen"
-                                                class="modal">
-                                                <div class="modal-content card w-sm-full" style="width: 680px"
-                                                    @click.away="isOpen = false">
-                                                    <div class="head">
-                                                        <h6>Imagen del paquete</h6>
-                                                        <div class="close">
-                                                            <button @click="isOpen = false"
-                                                                class="btn btn-default btn-circle btn-small">
-                                                                <i class='bx bx-x bx-sm'></i>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-modal scroll-auto">
-                                                        <img src="{{ detail.image.url }}" 
-                                                            alt="{{ detail.description }}">
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        {% else %}
-                                        <div class="package-picture">
-                                            <span class="text-muted text-small">Imagen no disponible</span>
-                                        </div>
-                                        {% endif %}
-                                        <div class="package-details">
-                                            <h6>Nota</h6>
-                                            {% if detail.description %}
-                                            <p>{{ detail.description }}</p>
-                                            {% else %}
-                                            <p>El paquete no tiene una nota...</p>
-                                            {% endif%}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="address-order-summary">
-                    <div class="distance">
-                        <h5 class="m-0">{{ detail.distance|unlocalize }}{% if detail.distance >= 1 %}KM{% else %}M{% endif %}</h5>
-                        <p class="text-small">Distancia</p>
-                    </div>
-                    <div class="rate">
-                        <div class="price flex items-center">
-                            <span class="text-muted mr-1">S/.</span>
-                            <div class="h5 m-0">{{ detail.price_rate|unlocalize }}</div>
-                        </div>
-                        <p class="text-small m-0">Precio de tarifa</p>
-                    </div>
-                </div>
+                    {% include 'details/snippets/detail-item.html' with edit=True %}
                 {% endfor %}
 
                 {% else %}
@@ -253,29 +113,7 @@
                 {% endif %}
             </div>
             <div class="order-right">
-                <div class="order-total-2">
-                    <div class="order-row">
-                        <h class="text-muted">Subtotal</h>
-                        <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
-                            <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
-                            {{ order.sub_total|unlocalize }}
-                        </div>
-                    </div>
-                    <div class="order-row">
-                        <h6 class="text-muted">IGV</h6>
-                        <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
-                            <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
-                            {{ order.igv|unlocalize }}
-                        </div>
-                    </div>
-                    <div class="order-row mt-4">
-                        <h6 class="m-0">Total a pagar</h6>
-                        <div class="price h4 flex justity-end items-center">
-                            <span class="h6 text-muted m-0 mr-1">S/. </span>
-                            {{ order.total|unlocalize }}
-                        </div>
-                    </div>
-                </div>
+                {% include 'details/snippets/detail-summary.html' %}
             </div>
         </div>
 
