--- a/details/templates/details/detail.html
+++ b/details/templates/details/detail.html
@@ -142,43 +142,7 @@
                 </div>
             </div>
             <div class="order-right">
-                <div class="order-total-2">
-                    <div class="order-row">
-                        <h class="text-muted">Subtotal</h>
-                        <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
-                            <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
-                            <span id="subtotal">{{ detail.order.sub_total|unlocalize }}</span>
-                        </div>
-                    </div>
-                    <div class="order-row">
-                        <h6 class="text-muted">IGV</h6>
-                        <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
-                            <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
-                            <span id="igv">{{ detail.order.igv|unlocalize }}</span>
-                        </div>
-                    </div>
-                    
-                    <div id="discount-wrapper" class="order-row" style="display: {% if detail.order.promo_code %}grid;{% else %}none;{% endif %}">
-                        <h6 class="text-danger">Descuento</h6>
-                        <div class="price h6 font-semibold text-danger flex justity-end items-center m-0">
-                            <span class="text-base font-medium text-danger m-0 mr-1">-S/.</span>
-                            <span id="discount">{{ detail.order.get_discount|unlocalize }}</span>
-                        </div>
-                    </div>
-                    <div id="total-previous-wrapper" class="order-row" style="display: {% if detail.order.promo_code %}grid;{% else %}none;{% endif %}">
-                        <span class="font-medium text-danger text-small">Total anterior</span>
-                        <span class="font-medium text-right text-danger text-small" style="text-decoration: line-through">S/. <span id="total-previous">{{ detail.order.get_total_previous|unlocalize }}</span></span> 
-                    </div>
-                    
-                    <div class="order-row mt-4">
-                        <h6 class="m-0">Total a pagar</h6>
-                        <div class="price h4 flex justity-end items-center">
-                            <span class="h6 text-muted m-0 mr-1">S/. </span>
-                            <span id="total">{{ detail.order.total|unlocalize }}</span>
-                        </div>
-                        
-                    </div>
-                </div>
+                {% include 'details/snippets/detail-summary.html' %}
 
                 {% if not request.user.is_driver %}
                 <div class="form-group mt-5">
