--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -118,114 +118,7 @@
                 <div class="order-addresess-2">
                     {% if order.detail_set.count > 0 %}
                     {% for detail in order.detail_set.all %}
-
-                    <div class="address-item">
-                        <div class="address-delivered">
-                            <div class="address-origin">
-                                <div class="text-small flex items-center"><i style="margin-right: 5px;"
-                                        class="bx bx-user bx-xs"></i> {{ detail.address_origin.full_name }}</div>
-                                <h6>{{ detail.address_origin.address }}</h6>
-                                <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
-                            </div>
-                            <img class="order-icon" src="{% static 'icon/order-icon.svg' %}" />
-                            <div class="address-destiny">
-                                <div class="text-small flex items-center justity-end"><i style="margin-right: 5px;"
-                                        class="bx bx-user bx-xs"></i> {{ detail.address_destiny.full_name }}</div>
-                                <h6>{{ detail.address_destiny.address }}</h6>
-                                <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
-                            </div>
-                        </div>
-                        <div class="address-order-detail">
-                            <div class="collapse" x-data="{ isOpen: false }">
-                                <div class="collapse-title cursor-pointer" @click="isOpen = !isOpen">
-                                    <h6>Detalles del pedido</h6>
-                                    <i class='bx bx-chevron-down bx-sm' :class="{ 'bx-bx-rotate-180': isOpen }"></i>
-                                </div>
-                                <div class="collapse-content"
-                                    x-show.transition.in.scale.opacity.400ms.out.origin.top.scale.opacity.200ms="isOpen">
-                                    <div class="client-info">
-                                        <h6 class="mb-2 subheading text-muted">Información del paquete</h6>
-                                        <div class="detail-package">
-                                            <div class="detail-package__row">
-                                                <h6>Tamaño</h6>
-                                                <p>{{ detail.get_size_display }}</p>
-                                            </div>
-                                            <div class="detail-package__row">
-                                                <h6>Contenido</h6>
-                                                <p>{{ detail.contain }}</p>
-                                            </div>
-                                            <div class="detail-package__row">
-                                                <h6>Valor</h6>
-                                                <p>{{ detail.value }}</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="footer-details mt-4">
-                                        <h6 class="mb-2 subheading text-muted">Detalles adicionales</h6>
-                                        <div class="package">
-                                            {% if detail.image %}
-                                            <div class="package-picture modal-container" x-data="{ isOpen: false }">
-                                                <div class="package-picture cursor-pointer" @click="isOpen = true">
-                                                    <img src="{{ detail.image.url }}" alt="{{ detail.description }}">
-                                                </div>
-                                                <div x-show.transition.in.scale.opacity.100ms.out.scale.opacity.100ms="isOpen"
-                                                    class="modal">
-                                                    <div class="modal-content card" style="width: 600px"
-                                                        @click.away="isOpen = false">
-                                                        <div class="head">
-                                                            <h6>Imagen del paquete</h6>
-                                                            <div class="close">
-                                                                <button @click="isOpen = false"
-                                                                    class="btn btn-default btn-circle btn-small">
-                                                                    <i class='bx bx-x bx-sm'></i>
-                                                                </button>
-                                                            </div>
-                                                        </div>
-                                                        <div class="form-modal">
-                                                            <img src="{{ detail.image.url }}" style="width: 100%"
-                                                                alt="{{ detail.description }}">
-                                                        </div>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            {% else %}
-                                            <div class="package-picture">
-                                                <span class="text-muted text-small">Imagen no disponible</span>
-                                            </div>
-                                            {% endif %}
-                                            <div class="package-details">
-                                                <h6>Descripción</h6>
-                                                {% if detail.description %}
-                                                <p>{{ detail.description }}</p>
-                                                {% else %}
-                                                <p class="text-muted">Sin nota o descripción del paquete</p>
-                                                {% endif %}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="address-order-summary">
-                        <div class="distance">
-                            <h5 class="m-0">{{ detail.distance|unlocalize }}{% if detail.distance >= 1 %}KM{% else %}M{% endif %}</h5>
-                            <p class="text-small">Distancia</p>
-                        </div>
-                        <div class="rate">
-                            <div class="price flex items-center">
-                                <span class="text-muted mr-1">S/.</span>
-                                <div class="h5 m-0" id="price-rate">{{ detail.price_rate|unlocalize }}</div>
-                            </div>
-                            <div id="price-rate-previous-wrapper" style="display: {% if detail.price_rate_previous %}grid;{% else %}none;{% endif %}">
-                                <span class="font-medium text-right text-danger text-small"
-                                    style="text-decoration: line-through">S/. <span id="price-rate-previous">{{ detail.price_rate_previous|unlocalize }}</span>
-                                </span>
-                            </div>
-                            <p class="text-small m-0">Precio de tarifa</p>
-                        </div>
-                    </div>
+                        {% include 'details/snippets/detail-item.html' %}
                     {% endfor %}
 
                     {% else %}
@@ -234,63 +127,10 @@
                     {% endif %}
                 </div>
                 <div class="order-right">
-                    <div class="order-total-2">
-                        <div class="order-row">
-                            <h class="text-muted">Subtotal</h>
-                            <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
-                                <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
-                                <span id="subtotal">{{ order.sub_total|unlocalize }}</span>
-                            </div>
-                        </div>
-                        <div class="order-row">
-                            <h6 class="text-muted">IGV</h6>
-                            <div class="price h6 font-semibold text-muted flex justity-end items-center m-0">
-                                <span class="text-base font-medium text-muted m-0 mr-1">S/.</span>
-                                <span id="igv">{{ order.igv|unlocalize }}</span>
-                            </div>
-                        </div>
-
-                        <div id="discount-wrapper" class="order-row"
-                            style="display: {% if order.promo_code %}grid;{% else %}none;{% endif %}">
-                            <h6 class="text-danger">Descuento</h6>
-                            <div class="price h6 font-semibold text-danger flex justity-end items-center m-0">
-                                <span class="text-base font-medium text-danger m-0 mr-1">-S/.</span>
-                                <span id="discount">
-                                    {% if order.get_discount_special > 0 %}
-                                        {{ order.get_discount_special|unlocalize }}
-                                    {% else %}
-                                        {{ order.get_discount|unlocalize }}
-                                    {% endif %}
-                                </span>
-                            </div>
-                        </div>
-                        <div id="total-previous-wrapper" class="order-row"
-                            style="display: {% if order.promo_code %}grid;{% else %}none;{% endif %}">
-                            <span class="font-medium text-danger text-small">Total anterior</span>
-                            <span class="font-medium text-right text-danger text-small"
-                                style="text-decoration: line-through">S/. <span id="total-previous">
-                                    {% if order.promo_code %}
-                                        {% if order.promo_code.special > 0 %}
-                                        {{ order.get_total_previous_special|unlocalize }}
-                                        {% else %}
-                                        {{ order.get_total_previous|unlocalize }}
-                                        {% endif %}
-                                    {% endif %}
-                                </span></span>
-                        </div>
-
-                        <div class="order-row mt-4">
-                            <h6 class="m-0">Total a pagar</h6>
-                            <div class="price h4 flex justity-end items-center">
-                                <span class="h6 text-muted m-0 mr-1">S/. </span>
-                                <span id="total">{{ order.total|unlocalize }}</span>
-                            </div>
-
-                        </div>
-                    </div>
+                    {% include 'details/snippets/detail-summary.html' %}
 
                     <div class="form-group mt-5">
-                        <input type="text" class="input" name="promo-code" id="promo-code"
+                        <input type="text" class="input" name="promo-code" id="promo-code" style="text-transform: uppercase;"
                             placeholder="Ingrese el cupón de promoción" value="{{ order.promo_code.code }}" {% if order.promo_code %}readonly{% endif %}>
                         {% if order.promo_code %}
                         <div class="mt-2 text-success">
@@ -361,8 +201,8 @@
     const inputPromoCode = document.getElementById('promo-code');
     const messagePromoCode = document.getElementById('promo-code-message');
     const total = document.getElementById('total');
-    const igv = document.getElementById('igv');
-    const sub_total = document.getElementById('subtotal');
+    // const igv = document.getElementById('igv');
+    // const sub_total = document.getElementById('subtotal');
     const discount_wrapper = document.getElementById('discount-wrapper');
     const total_previous_wrapper = document.getElementById('total-previous-wrapper');
     const price_rate_previous_wrapper = document.querySelectorAll('#price-rate-previous-wrapper');
@@ -375,8 +215,8 @@
                 .then(res => res.json())
                 .then(data => {
                     if (data.status === true) {
-                        igv.innerText = data.igv;
-                        sub_total.innerText = data.sub_total;
+                        // igv.innerText = data.igv;
+                        // sub_total.innerText = data.sub_total;
                         code.value = data.code;
                         code.readOnly = true;
                         if (data.price_rate_previous_list.length > 0){
