Auth store state context react

--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -134,10 +134,10 @@
 </div>
 {% endblock content_head %}
 {% block content %}
-<!-- <div id="orders">
-</div> -->
+<div id="orders">
+</div>
 
-<div class="filter-list">
+<!-- <div class="filter-list">
     <a href="{% url 'orders:index' %}" class="btn btn-{% if not 'status' in request.GET %}primary{% else %}link{% endif %} btn-rounded btn-small">Todos</a>
     {% for cstatus in statuses %}
     <a href="{% url 'orders:index' %}?status={{ cstatus }}" class="btn btn-{% if status == cstatus %}primary{% else %}link{% endif %} btn-rounded btn-small">{{ cstatus.label }}</a>
@@ -314,7 +314,7 @@
         </p>
     </div>
     {% endif %}
-</div>
+</div> -->
 
 {% endblock content %}
 {% block scripts %}
