--- a/courier_app/static/css/helpers/spacing.css
+++ b/courier_app/static/css/helpers/spacing.css
@@ -15,6 +15,9 @@
 .mr-1{
     margin-right: 0.25rem !important;
 }
+.ml-2{
+    margin-left: 0.5rem !important;
+}
 
 .mb-2{
     margin-bottom: 0.5rem !important;
