--- a/courier_app/static/css/styles.css
+++ b/courier_app/static/css/styles.css
@@ -32,6 +32,7 @@
 @import 'pages/address-list.css';
 @import 'pages/admin-content.css';
 @import 'pages/auth.css';
+@import 'pages/budget.css';
 @import 'pages/client-list.css';
 @import 'pages/dashboard.css';
 @import 'pages/error.css';
