--- a/courier_app/static/css/base.css
+++ b/courier_app/static/css/base.css
@@ -30,13 +30,13 @@ body.dark{
     --text-color: rgba(var(--title-color), 0.6);
     --text-secondary-color: rgba(255, 255, 255, 0.5);
     --btn-default-color: rgba(255, 255, 255, 0.15);
-    --bg-primary-color: #2c2c2c;
-    --bg-secondary-color: #414141;
+    /* --bg-primary-color: #2c2c2c;
+    --bg-secondary-color: #414141; */
     --filter-primary-color: invert(100%) sepia(100%) saturate(9%) hue-rotate(167deg) brightness(103%) contrast(105%);;
     --filter-secondary-color: invert(62%) sepia(7%) saturate(92%) hue-rotate(219deg) brightness(93%) contrast(85%);
     /* blue */
-    /* --bg-primary-color: #1f1c2f;
-    --bg-secondary-color: #292448; */
+    --bg-primary-color: #1f1c2f;
+    --bg-secondary-color: #292448;
 }
 
 .container{
