--- a/courier_app/static/css/components/buttons.css
+++ b/courier_app/static/css/components/buttons.css
@@ -104,6 +104,10 @@
     border: 2px solid white;
     color: white;
 }
+.btn-white{
+    background-color: white;
+    color: rgba(0 0 0 0 / 100);
+}
 .btn-rounded{
     border-radius: 28px;
 }
