--- a/templates/admin/snippets/summary-count.html
+++ b/templates/admin/snippets/summary-count.html
@@ -17,7 +17,7 @@
 <div class="card card__client">
     <div class="card__order__head">
         <div class="icon icon-secondary-default icon-sm icon-circle">
-            <i class="bx {{ summary_count.driver_icon2 }}"></i>
+            <i class="bx {{ summary_count.driver_icon2 }} text-white"></i>
         </div>
         <a href="{{ summary_count.driver_more_path2 }}" class="text-white">
             <i class='bx bx-chevron-right bx-sm'></i>
@@ -31,7 +31,7 @@
 <div class="card card__payment">
     <div class="card__order__head">
         <div class="icon icon-secondary-default icon-sm icon-circle">
-            <i class="bx {{ summary_count.driver_icon3 }}"></i>
+            <i class="bx {{ summary_count.driver_icon3 }} text-white"></i>
         </div>
         <a href="{{ summary_count.driver_more_path3 }}" class="text-white">
             <i class='bx bx-chevron-right bx-sm'></i>
@@ -60,7 +60,7 @@
 <div class="card card__client">
     <div class="card__order__head">
         <div class="icon icon-secondary-default icon-sm icon-circle">
-            <i class="bx {{ summary_count.client_icon2 }}"></i>
+            <i class="bx {{ summary_count.client_icon2 }} text-white"></i>
         </div>
         <a href="{{ summary_count.client_more_path2 }}" class="text-white">
             <i class='bx bx-chevron-right bx-sm'></i>
@@ -89,7 +89,7 @@
 <div class="card card__client">
     <div class="card__order__head">
         <div class="icon icon-secondary-default icon-sm icon-circle">
-            <i class="bx {{ summary_count.admin_icon2 }}"></i>
+            <i class="bx {{ summary_count.admin_icon2 }} text-white"></i>
         </div>
         <a href="{{ summary_count.admin_more_path2 }}" class="text-white">
             <i class='bx bx-chevron-right bx-sm'></i>
@@ -103,7 +103,7 @@
 <div class="card card__payment">
     <div class="card__order__head">
         <div class="icon icon-secondary-default icon-sm icon-circle">
-            <i class="bx {{ summary_count.admin_icon3 }}"></i>
+            <i class="bx {{ summary_count.admin_icon3 }} text-white"></i>
         </div>
         <a href="{{ summary_count.admin_more_path3 }}" class="text-white">
             <i class='bx bx-chevron-right bx-sm'></i>
