--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -25,9 +25,9 @@
                     </div>
                 </div>
                 <div class="form-modal">
-                    <h5>Los depósitos se realizan a:</h6> 
+                    <img src="{% static 'img/payment/account-payment.jpeg' %}" style="width: 100%;" alt="Payment accounts">
 
-                    <h6>Representante de la Empresa: Meredith Botta </h6>
+                    <!-- <h6>Representante de la Empresa: Meredith Botta </h6>
                     <p>RUC: 20605386521</p>
                     <p>Razón Social: E -COURIER INVERSIONES EIRL</p>
                     <p>Nombre Comercial: CuyClick Perú</p>
@@ -59,7 +59,7 @@
                             <img alt="Plin" src="{% static 'img/payment/plin.jpeg' %}">
                           </div>
                         </div>
-                      </div>
+                      </div> -->
                 </div>
 
             </div>
