--- a/details/templates/details/detail.html
+++ b/details/templates/details/detail.html
@@ -20,7 +20,7 @@
 <div class="mb-10">
     <div class="card card-create-order create-order">
         
-        <div class="order-content-2">
+        <div class="order-content-2" {% if request.user.is_driver %} style="grid-template-columns: 1fr;" {% endif %}>
             <div class="order-addresess-2">
                 <div>
                     <div>
@@ -43,6 +43,7 @@
                                     class="bx bx-user bx-xs"></i> {{ detail.address_origin.full_name }}</div>
                             <h6>{{ detail.address_origin.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
+                            <div class="text-small font-medium">Cel <span class="text-body font-bold">{{ detail.address_origin.cell_phone }}</span></div>
                         </div>
                         <img class="order-icon" src="{% static 'icon/order-icon.svg' %}"/>
                         <div class="address-destiny">
@@ -50,6 +51,7 @@
                                     class="bx bx-user bx-xs"></i> {{ detail.address_destiny.full_name }}</div>
                             <h6>{{ detail.address_destiny.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
+                            <div class="text-small font-medium">Cel <span class="text-body font-bold">{{ detail.address_destiny.cell_phone }}</span></div>
                         </div>
                     </div>
                     {% if not request.user.is_driver %}
@@ -142,9 +144,8 @@
                 </div>
             </div>
             <div class="order-right">
-                {% include 'details/snippets/detail-summary.html' with order=detail.order %}
-
                 {% if not request.user.is_driver %}
+                {% include 'details/snippets/detail-summary.html' with order=detail.order %}
                 <div class="form-group mt-5">
                     {% if detail.order.promo_code %}
                         <h6>Código de promoción aplicada</h6>
